# ZitiBot

./: .gitignore  CMakeLists.txt  README.md  build_zitibot.sh  dump.rdb  launch_opti_controller.sh  launch_zitibot.sh  launch_zitibot_arm.sh  launch_zitibot_full.sh  launch_zitibot_panda.sh  launch_zitibot_panda_new.sh  launch_zitibot_real.sh  requirements.txt
archive/: launch_zitibot.sh  launch_zitibot_real.sh
controllers/: bowl_pour_controller.py  click_to_move_controller.py  egg_crack_controller.py  egg_crack_moving_controller.py  egg_crack_stationary_controller.py  egg_grasp_controller.py  egg_pour_controller_new.py  gemini_image_cli.py  grasp_and_move_controller.py  grasp_and_place_controller.py  grasp_and_pour_controller.py  grasp_and_pour_jar_controller.py  grasp_pour_vision_base_controller.py  mixing_full_controller.py  mixing_simple_controller.py  move_base_controller.py  opti_controller.py  pour_and_move_controller.py  scramble_controller.py  station_nav_test_controller.py  teleop_gamepad_controller.py  test_base_axes.py  touch_controller.py  tune_marker_offset.py  vision_controller.py  vision_controller_new.py  whisk_controller.py
controllers/archive/: egg_pour_controller.py  egg_pour_controller_test.py  egg_pour_stationary_controller.py  gemini_image_cli.py  grasp_and_place_controller.py  grasp_and_pour_controller.py  mixing_controller.py  mixing_reorient_controller.py  mixing_simple_controller.py  mixing_vision_base_controller.py  pour_and_move_controller.py  stirring_controller.py  vision_grasp_place_controller.py  vision_grasp_pour_controller.py  vision_grasp_pour_controller_v2.py  vision_pan_grasp_controller.py
controllers/routines/: crack_eggs_state_machine.py  scramble_eggs_state_machine.py  ziti_state_machine.py
controllers/tidybot_base/: __init__.py  base_controller.py  constants.py  dump.rdb  gamepad_teleop.py  mocap.py  opti_nav.py  opti_planner.py  redis_driver.py  redis_io.py  se2.py  utils.py
controllers/vision/: __init__.py  calibrate_hand_eye.py  camera_web_stream.py  gemini_pointing.py  gemini_pointing_old.py  grasp_demo.py  grasp_utils.py  hand_eye_T_flange_camera.json  hand_eye_T_flange_camera.npy  predictors.py  realsense_rgbd.py
controllers/vision/ggcnn/: __init__.py  ggcnn2.py
controllers/vision/ggcnn/weights/: .gitignore  download_weights.sh
controllers/vision/grconvnet/: __init__.py  grasp_model.py  grconvnet3.py
controllers/vision/grconvnet/weights/: .gitignore  download_weights.sh
controllers/zitibot_core/: __init__.py  arm.py  base.py  constants.py  context.py  gains.py  gripper.py  legacy_grasp_pour.py  move_logger.py  redis_keys.py  runner.py
controllers/zitibot_tasks/: __init__.py  egg_crack.py  gemini.py  grasp.py  mix.py  oven.py  pour.py  visual_servo.py
docs/: index.html  main.js  styles.css
scripts/: build_site_media.sh  record_home_cartesian.py  record_home_position.py  test_camera.py
urdf_models/mmp_panda/: mmp_panda.urdf
urdf_models/panda/: panda_arm_simulation.urdf
urdf_models/test_objects/meshes/visual/: EmptyBowl.mtl  ladle.mtl
vision/: gemini_point_demo.py  grasp_demo.py  grasp_utils.py  predictors.py  test_camera.py
vision/ggcnn/: grasp_utils.py
vision/ggcnn/weights/: download_weights.sh
vision/grconvnet/weights/: download_weights.sh
zitibot_mmp_panda/: CMakeLists.txt  controller.cpp  controller_touch.cpp  redis_keys.h  redis_keys.txt  redis_keys_sim.h  simviz.cpp  world_mmp_panda.urdf
